# Secret-Sharing

./: CMakeCache.txt  CMakeLists.txt  Makefile  Party.h  ProtocolParty.h  TemplateField.h  cmake_install.cmake  main.cpp  run_protocol.sh  secret_sharing  secret_sharing.cbp
